Fixed wrap issue on about small screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -324,6 +324,13 @@ h1 {
 
   #about {
     flex-direction: column-reverse;
+    .container {
+      flex-direction: column-reverse;
+    }
+
+    div {
+      height: 40vh;
+    }
 
     .about {
       div {
